# AED

./: .gitmodules
Mooshak/ADNAlien/: CMakeLists.txt  main.cpp
Mooshak/GoldenTicket/: CMakeLists.txt  main.cpp
Mooshak/NumerosArranjadinhos/: CMakeLists.txt  main.cpp
Mooshak/SentidoDaVida/: main.cpp
Pratica1/Tests/: parque.cpp  parque.h
Pratica10/Tests/: funWithGraphs.cpp  graph.cpp  graph.h
Pratica1_extra/Tests/: mail.cpp  mail.h  postOffice.cpp
Pratica2/: CMakeLists.txt
Pratica2/Tests/: myVector.h  tests.cpp
Pratica3/: CMakeLists.txt
Pratica3/Tests/: funSearchProblem.cpp  tests.cpp
Pratica3/docs/output/html/: class_fun_search_problem.html  dir_33c78a012c8d08979f57a54a07694c46.html  fun_search_problem_8h_source.html
Pratica4/Tests/: funSortProblem.cpp  funSortProblem.h
Pratica5/Tests/: game.cpp
Pratica6/Tests/: bst.h  dictionary.cpp  dictionary.h  game.cpp
Pratica7/Tests/: funWithBSTs.cpp
Pratica8/Tests/: funWithHashTables.cpp  hashTable.h
Pratica9/Tests/: tests.cpp
SettingGoogleTest/: CMakeLists.txt
SettingGoogleTest/tests/: ClassName.h  test.cpp
TestesModelo/T1-2018/: 2018_pratica.docx  2018_teorica.docx  2018_teorica_resolução.docx  Resolução teórica.docx
TestesModelo/T1-2018/2018_ficheiros/Tests/: Account.cpp  Account.h  Bank.cpp  Bank.h  (+3 more)
TestesModelo/T1-2018/2018_pratica_resoluções/: Bank.cpp.docx  Bank.h.docx  BankOfficer.cpp.docx
TestesModelo/T2-2013/: CMakeLists.txt
TestesModelo/T2-2013/Tests/: ClubeVideo.cpp  ClubeVideo.h  Test.cpp
TestesModelo/T2-2018/: CMakeLists.txt  main.cpp
TestesModelo/T2-2018/Tests/: Doctor.cpp  Doctor.h  Hospital.cpp  Hospital.h  Test.cpp
TestesModelo/T2_2016/: CMakeLists.txt  main.cpp
TestesModelo/T2_2016/Tests/: AfterSalesService.cpp  Purchase.cpp  Test.cpp
